# Mai

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_learning.db  test_memory.db  test_method_integration.py
.github/workflows/: discord_sync.yml
.mai/config/: memory.yaml  sandbox.yaml
.planning/: DISCORD_MESSAGES.md  DISCORD_PROGRESS_REPORT.md  MCP.md  PROGRESS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-model-interface/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-model-interface-VERIFICATION.md
.planning/phases/02-safety-sandboxing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  (+2 more)
config/: audit.yaml  models.yaml  sandbox.yaml  security.yaml
data/: mai_memory.db
scripts/: bootstrap.ps1  bootstrap.sh  check.ps1  check.sh  contextpack.py
src/: __init__.py  __main__.py  mai.py  personality.py
src/Mai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/app/: __main__.py
src/audit/: __init__.py  crypto_logger.py  logger.py
src/config/: resource_tiers.yaml
src/memory/: __init__.py
src/models/: __init__.py  context_manager.py  conversation.py  lmstudio_adapter.py  mock_lmstudio.py  model_manager.py  resource_monitor.py
src/resource/: __init__.py  personality.py  scaling.py  tiers.py
src/safety/: __init__.py  api.py  coordinator.py
src/sandbox/: __init__.py  container_manager.py  executor.py
src/security/: __init__.py  assessor.py
tests/: __init__.py  test_docker_executor.py  test_docker_integration.py  test_integration.py  test_memory_system.py  test_personality_learning.py  test_safety_integration.py  test_sandbox_approval.py  test_sandbox_docker_integration.py
(+91 files in other folders)
